<resources>
    <string name="app_name">HiTomato</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="balance">余额</string>
    <string name="item_hint">我想...</string>
    <string name="my_balance">余额充值</string>
    <string name="my_bills">我的订单</string>
    <string name="fulfill">充值</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="drawerlayout_title">个人中心</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="tip_double_click_exit">再按一次退出</string>

    <string name="drawer_open">""</string>
    <string name="exit">退出</string>
    <string name="cancel_exit">取消</string>
    <string name="exit_menu_title">HiTomato</string>
    <string name="exit_menu_content">确定退出吗？</string>
    <string name="setting_sound">声音设置</string>
    <string name="setting_vibrate">震动</string>
    <string name="setting_theme_color">主题色</string>
    <string name="setting_alarm">每日提醒</string>
    <string name="sound_count">通知声音重复</string>
    <string name="sound_type">通知类型</string>
    <string name="version_name">V1.0.0</string>

    <string name="suggest_qq_or_mail">留下您的QQ或邮箱(选填)</string>
    <string name="suggest_hind_text">您的建议是我最大的动力</string>
    <string name="dont_no_text">Sorry,不能提交空白信息T_T</string>
    <string name="thx">非常感谢您的建议，我会做得更好</string>
    <string name="sugesst_error">信息反馈失败请重试T_T</string>
    <string name="dont_repeat">您宝贵的意见正在提交中哦，请不要重复提交</string>

</resources>
