<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#fff"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avator"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:text="@string/app_name" />

        <include layout="@layout/divider_vertical" />

        <LinearLayout
            style="@style/linearlayout_horizontal"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/margin_20dp"
            android:paddingTop="@dimen/margin_20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/balance"
                android:textColor="@color/font_black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="¥0.00"
                android:textColor="@color/font_black"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:paddingRight="10dp"
                android:src="@drawable/right_arrow" />
        </LinearLayout>

        <include layout="@layout/divider_vertical" />

        <LinearLayout
            style="@style/linearlayout_horizontal"
            android:background="@drawable/btn_bg_gray"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingTop="@dimen/margin_15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:src="@drawable/icon_balance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_balance"
                android:textColor="@color/font_lightdark"
                android:textSize="15sp" />

            <Button
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/btn_bg_red_stroke"
                android:text="@string/fulfill"
                android:textColor="@color/font_pink"
                android:textSize="15dp" />

        </LinearLayout>

        <include layout="@layout/divider_vertical" />

        <LinearLayout
            style="@style/linearlayout_horizontal"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingTop="@dimen/margin_15dp"
            android:background="@drawable/btn_bg_gray"
            android:clickable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:src="@drawable/icon_bills" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_bills"
                android:textColor="@color/font_lightdark"
                android:textSize="15sp" />
        </LinearLayout>


        <include layout="@layout/divider_vertical" />
    </LinearLayout>
</LinearLayout>